Defer random graded card command to ensure the delivery of a response within 3 seconds

--- a/localization/localization_en.json
+++ b/localization/localization_en.json
@@ -1,5 +1,6 @@
 {
   "common": {
+    "loading": "Loading...",
     "pokedollar": "Pokémon Dollar",
     "collection": "collection",
     "booster": "booster",
