--- a/localization/localization_fr.json
+++ b/localization/localization_fr.json
@@ -1,5 +1,6 @@
 {
   "common": {
+    "loading": "Chargement...",
     "pokedollar": "Pokédollar",
     "collection": "collection",
     "booster": "booster",
