--- a/localization/localization_fr.json
+++ b/localization/localization_fr.json
@@ -24,6 +24,10 @@
   "ping_cmd": {
     "response_msg": "Mon ping est de"
   },
+  "bot_infos_cmd": {
+    "title": "Métadonnées du bot",
+    "count_servers": "Nombre de serveurs utilisant le Bot"
+  },
   "give_money_cmd": {
     "response_msg": "L'utilisateur {user} a reçu {amount} Pokédollars"
   },
