--- a/localization/localization_en.json
+++ b/localization/localization_en.json
@@ -1,5 +1,6 @@
 {
   "common": {
+    "feature_disabled": "Feature is currently work-in-progress.",
     "loading": "Loading...",
     "pokedollar": "Pokémon Dollar",
     "collection": "collection",
@@ -164,5 +165,9 @@
   },
   "ranking_cmd": {
     "title": "User Collection Ranking"
+  },
+  "grade_cmd": {
+    "no_available_copy": "You do not own any ungraded copy of this card.",
+    "card_has_been_grade": "The card `{card_id}` has been graded as: {grade}."
   }
 }
