Include graded cards while looking at a collection and add grade field

--- a/localization/localization_en.json
+++ b/localization/localization_en.json
@@ -7,6 +7,8 @@
     "booster": "booster",
     "basic_booster": "Basic Booster",
     "promo_booster": "Promo Booster",
+    "grade": "grade",
+    "not_graded": "ungraded",
     "rarity": "rarity",
     "set": "set",
     "quantity": "quantity",
