Add cooldown to grade card command

--- a/localization/localization_en.json
+++ b/localization/localization_en.json
@@ -16,6 +16,7 @@
     "booster_cooldown": "Next free booster:",
     "promo_booster_cooldown": "Next free Promo booster:",
     "daily_cooldown": "Next daily:",
+    "grading_cooldown": "Next free grading:",
     "minutes": "minutes",
     "hours": "hours",
     "last_interaction": "Last interaction done date",
