--- a/localization/localization_fr.json
+++ b/localization/localization_fr.json
@@ -16,6 +16,7 @@
     "booster_cooldown": "Prochain booster gratuit :",
     "promo_booster_cooldown": "Prochain booster Promo gratuit :",
     "daily_cooldown": "Prochain daily :",
+    "grading_cooldown": "Prochaine évaluation gratuite :",
     "minutes": "minutes",
     "hours": "heures",
     "last_interaction": "Date de la dernière interaction",
