Update path to card collection in notebook

--- a/data-card-analysis/TestDataCardCollection.ipynb
+++ b/data-card-analysis/TestDataCardCollection.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cards = pandas.read_pickle(\"data/cards.p\")"
+    "cards = pandas.read_pickle(\"../data/cards.p\")"
    ]
   },
   {
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "e424d0bd",
    "metadata": {},
    "outputs": [
@@ -954,7 +954,7 @@
        "Name: id, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "af4b3a5c",
    "metadata": {},
    "outputs": [
@@ -1921,7 +1921,7 @@
        "[25 rows x 26 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1932,7 +1932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "c30258f3",
    "metadata": {},
    "outputs": [
@@ -1943,7 +1943,7 @@
        "Name: id, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1954,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "id": "27573b2d",
    "metadata": {},
    "outputs": [
@@ -1966,7 +1966,7 @@
        "Name: id, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
