--- a/localization/localization_fr.json
+++ b/localization/localization_fr.json
@@ -8,7 +8,6 @@
     "basic_booster": "Booster de base",
     "promo_booster": "Booster Promo",
     "grade": "évaluation",
-    "not_graded": "non-évaluée",
     "rarity": "rareté",
     "set": "série",
     "quantity": "quantité",
@@ -177,6 +176,7 @@
     "title": "Classement des joueurs par nombre de cartes"
   },
   "grade": {
+    "not_graded": "Non-évaluée",
     "0": "Mauvaise",
     "1": "Moyenne",
     "2": "Bonne",
