--- a/localization/localization_fr.json
+++ b/localization/localization_fr.json
@@ -197,6 +197,8 @@
     "card_has_been_grade": "La carte `{card_id}` a été évaluée comme étant « {grade} »."
   },  
   "grade_rates_cmd": {
+    "name": "taux_evaluations",
+    "desc": "Table des taux d'obtention de chaque évaluation de carte",
     "title": "Proportions des évaluations de carte",
     "description": "Chance d'obtenir chacune des évaluations différentes lors de l'évaluation d'une carte"
   }
