Add names and descriptions localization for daily command

--- a/localization/localization_en.json
+++ b/localization/localization_en.json
@@ -85,6 +85,8 @@
     "discord_server_invitation": "Discord server invitation link"
   },
   "daily_cmd": {
+    "name": "daily",
+    "desc": "Claim daily gift",
     "response_msg": "You earned {amount} Pokémon Dollars"
   },
   "booster_cmd": {
