Add storage of gradings in user entity

--- a/localization/localization_en.json
+++ b/localization/localization_en.json
@@ -8,6 +8,7 @@
     "basic_booster": "Basic Booster",
     "promo_booster": "Promo Booster",
     "grade": "grade",
+    "grading": "Grading",
     "rarity": "rarity",
     "set": "set",
     "quantity": "quantity",
