--- a/localization/localization_fr.json
+++ b/localization/localization_fr.json
@@ -8,6 +8,7 @@
     "basic_booster": "Booster de base",
     "promo_booster": "Booster Promo",
     "grade": "évaluation",
+    "grading": "Évaluation",
     "rarity": "rareté",
     "set": "série",
     "quantity": "quantité",
