--- a/localization/localization_en.json
+++ b/localization/localization_en.json
@@ -20,6 +20,7 @@
     "minutes": "minutes",
     "hours": "hours",
     "last_interaction": "Last interaction done date",
+    "quest_accomplished": "Congratulations! You accomplished the quest \"{quest_name}\"",
     "user_not_found": "User not found",
     "user_or_card_not_found": "User not found or they don't have the card",
     "no_results": "No results found",
